tests/fixtures/errors/domain_min_exceeds_max.gcl
// domain_min_exceeds_max.gcl -- min > max
param mass: Mass = 500.0 kg;
